# snowpaw

./: .gitignore  .gitmodules  GEMINI.md  README.md  TASKS.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
agent/: __init__.py  downloader.py  main.py  requirements.txt  test_task_tools.py
agent/backends/: __init__.py  airllm_backend.py  base.py  llamacpp_backend.py  selector.py
agent/harness/: __init__.py  background_tasks.py  context_manager.py  memory.py  message.py  orchestrator.py  permissions.py  secret_scanner.py  subagent.py  tool_registry.py
agent/prompt/: __init__.py  gemma_template.py  system_prompt.py  tools_xml.py
agent/tools/: __init__.py  agent_tool.py  bash_tool.py  delete_tool.py  edit_tool.py  file_staleness.py  glob_tool.py  grep_tool.py  list_dir_tool.py  move_tool.py  multi_edit_tool.py  playwright_tool.py  read_tool.py  repl_tool.py  sleep_tool.py  task_tools.py  web_fetch_tool.py  web_search_tool.py  write_tool.py
design/: AGENT_GAP_ANALYSIS.md  DESIGN.md  TOOLS.md  UI_TESTING.md
scripts/: build-sidecar.sh  download-model.sh  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src/components/: MenuBar.tsx  ModelDownloader.tsx  ModelLoadProgress.tsx  PermissionDialog.tsx  Settings.tsx  Terminal.tsx
src/hooks/: useAgent.ts  useConfig.ts
src/styles/: global.css
tests/: test_integration_tool_call.py  test_model_loading_flow.py
